# YuyuFrame-v2

./: .gitignore  PRIVACY.md  README.md
.github/workflows/: release.yml
Backend/: Cargo.toml  tauri.conf.json  updater.key.pub
Backend/capabilities/: default.json
Backend/icons/: icon.icns
Backend/src/: db.rs  lib.rs  main.rs  state.rs
Backend/src/commands/: auth.rs  instances.rs  launch.rs  mc.rs  mod.rs  modpack.rs  mods.rs  stats.rs  sync.rs  system.rs  versions.rs  yuyu.rs
Backend/src/minecraft/: auth.rs  deps.rs  fabric.rs  forge.rs  launcher.rs  mod.rs  p2p.rs  p2p_libp2p.rs  version_pred.rs  versions.rs
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/api/: client.ts
Frontend/src/components/: TitleBar.tsx  UpdateChecker.tsx
Frontend/src/config/: beta.ts
Frontend/src/data/: presets.ts
Frontend/src/lib/: modrinthModpacks.ts
Frontend/src/pages/: Console.tsx  Home.tsx  Information.tsx  Instances.tsx  Login.tsx  Mods.tsx  Plans.tsx  Server.tsx  Settings.tsx  Stats.tsx  Sync.tsx  YuyuLogin.tsx
Frontend/src/stores/: useStore.ts
Frontend/src/types/: electron.d.ts  index.ts
Launcher-Agent/: build.bat
Launcher-Agent/content-core/: Cargo.toml  build.bat
Launcher-Agent/content-core/src/: lib.rs  modrinth.rs
Launcher-Agent/content-core/src/jni/: content.rs
Launcher-Agent/src/main/resources/: launcher-agent.properties  mixins.launcheragent.json
Launcher-Agent/src/stubs/net/minecraft/client/gui/screens/: Screen.java  (+1 more)
Launcher-Agent/src/stubs/net/minecraft/network/chat/: Component.java
(+31 files in other folders)
