[package]
name = "yuyuframe-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "yuyuframe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yuyuframe-backend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = { version = "2", features = ["deflate"] }
rand = "0.8"
base64 = "0.22"
sha1 = "0.10"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
libp2p = { version = "0.53", features = [
    "tokio", "tcp", "dns", "noise", "yamux",
    "identify", "relay", "dcutr", "request-response", "cbor", "macros",
] }
futures = "0.3"
